--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
-header {
+*{margin: 0;padding: 0;}
+
+
+
+.cabecalho {
     background-color: #a70a85;
     color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+    align-self: center;
+    padding: 24px 0;
 }
+
+.cabecalho-imagem{
+width: 5%;
+}
+
+.cabecalho-lista-item {
+    display: inline-block;margin: 0 16px;font-size: 32px;
+}
+    
