--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 .cabecalho-imagem{
 width: 5%;
 }
+.cabecalho-imagem2{width: 5%;}
 
 .cabecalho-lista-item {
     display: inline-block;margin: 0 16px;font-size: 32px;
