--- a/style.css
+++ b/style.css
@@ -14,10 +14,18 @@
 .cabecalho-imagem{
 width: 10%;
 }
-#imgpos {position: absolute;left: 1300px; top: 10px;}
+#imgpos {position: absolute;left: 1600px; top: 10px;}
 .cabecalho-imagem2{width: 5%;}
 
 .cabecalho-lista-item {
     display: inline-block;margin: 0 32px;font-size: 32px;
 }
+
+.escola-imagem { width: 20%;}
+
+.Escola {background-image: linear-gradient(#E070D585,#491844);
+display: flex;}
+
+.escola-div-conteudo{width: 35px 0;
+color: #ffffff;}
     
