--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {font-family: 'Kalam', cursive;}
 .cabecalho-imagem{
 width: 10%;
 }
-#imgpos {position: absolute;left: 1400px; top: 10px;}
+#imgpos {position: absolute;left: 1000p; top: 10px;}
 .cabecalho-imagem2{width: 5%;}
 
 .cabecalho-lista-item {
@@ -46,6 +46,16 @@ color: #ffffff;}
     width: 100px;
 }
 
-.estudante-icone { width: 24px;
+.estudante-icone { width: 24px;}
+
+.estudante-div{
+    text-align: center;
 }
-    
+
+.estudante-titulo {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.estudante-todos {display: grid ;
+grid-template-columns: ;}
