--- a/style.css
+++ b/style.css
@@ -58,4 +58,4 @@ color: #ffffff;}
 }
 
 .estudante-todos {display: grid ;
-grid-template-columns: ;}
+grid-template-columns: 20% 20% 20% 20% 20% 20% 20% 20% ;}
